# waitlist-kit

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  auth_client.py  db.py  docker-compose.yml  email_notify.py  landing.py  mcp_server.py  pyproject.toml  referrals.py  requirements.txt  server.py
templates/: confirmation.html  landing_dark.html  landing_gradient.html  landing_minimal.html
