[project]
name = "mcp-server-waitlistkit"
version = "1.0.0"
description = "Launch page + viral waitlist + analytics tool for pre-launch products"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic[email]>=2.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
waitlistkit-api = "server:app"
waitlistkit-mcp = "mcp_server:mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
